@@ -405,7 +405,6 @@ nodist_systemunit_DATA = \
 	units/systemd-fsck@.service \
 	units/systemd-fsck-root.service \
 	units/debug-shell.service \
-	units/initrd-parse-etc.service \
 	units/initrd-cleanup.service \
 	units/initrd-switch-root.service
 
@@ -444,7 +443,6 @@ EXTRA_DIST += \
 	units/systemd-hybrid-sleep.service.in \
 	units/systemd-suspend.service.in \
 	units/quotaon.service.in \
-	units/initrd-parse-etc.service.in \
 	units/initrd-cleanup.service.in \
 	units/initrd-switch-root.service.in
 
