@@ -193,11 +193,7 @@
                 can be mounted at <filename>/sysroot</filename>, the
                 <filename>sysroot.mount</filename> unit becomes active
                 and <filename>initrd-root-fs.target</filename> is
-                reached.  The service
-                <filename>initrd-parse-etc.service</filename> scans
-                <filename>/sysroot/etc/fstab</filename> for a possible
-                <filename>/usr</filename> mount point and additional
-                entries marked with the
+                reached.  Additional entries marked with the
                 <emphasis>x-initrd.mount</emphasis> option. All
                 entries found are mounted below
                 <filename>/sysroot</filename>, and
@@ -224,7 +220,7 @@
                        |             initrd-root-fs.target
                        |                       |
                        |                       v
-                       v            initrd-parse-etc.service
+                       v                       |
                 (custom initrd                 |
                  services...)                  v
                        |            (sysroot-usr.mount and
