@@ -11,6 +11,5 @@ Documentation=man:systemd.special(7)
 OnFailure=emergency.target
 OnFailureJobMode=replace-irreversibly
 ConditionPathExists=/etc/initrd-release
-After=initrd-parse-etc.service
 DefaultDependencies=no
 Conflicts=shutdown.target
