@@ -12,6 +12,6 @@ OnFailure=emergency.target
 OnFailureJobMode=replace-irreversibly
 ConditionPathExists=/etc/initrd-release
 Requires=basic.target
-Wants=initrd-root-fs.target initrd-fs.target initrd-parse-etc.service
+Wants=initrd-root-fs.target initrd-fs.target
 After=initrd-root-fs.target initrd-fs.target basic.target rescue.service rescue.target
 AllowIsolate=yes
